# lab-4

./: CMakeLists.txt  CommandsParser.cpp  CommandsParser.h  Hamming.cpp  Hamming.h  InOutBit.cpp  InOutBit.h  archive.cpp  archive.h  main.cpp
